# agentic-ui-generator-demo

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
data/: components-2026-07-15.json  grocery_inventory.json  states.json
src/backend/: agentServer.py  main.py  pyproject.toml  test_claude_agent_sdk.py
src/backend/utils/: generator.py
src/frontend/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
src/frontend/src/: App.tsx  index.css  vite-env.d.ts
src/frontend/src/api/: client.ts
src/frontend/src/components/AppHeader/: index.tsx
src/frontend/src/components/BottomPanel/: index.tsx
src/frontend/src/components/ChatPanel/: index.tsx
src/frontend/src/components/ComponentEditor/: index.tsx
src/frontend/src/components/LayoutBar/: index.tsx
src/frontend/src/components/LeftPanel/: index.tsx
src/frontend/src/components/MainArea/: index.tsx
src/frontend/src/pages/Dashboard/: index.tsx
src/frontend/src/pages/HomePage/: index.tsx
src/frontend/src/stores/: componentStore.tsx
src/frontend/src/types/: component.ts
