[project]
name = "agentic-ui-generator-demo"
version = "0.1.0"
description = "Agentic UI Generator Demo - FastAPI Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
dev = "uvicorn main:app --reload --port 8000"

[tool.ruff]
target-version = "py312"
line-length = 88